# prism-platform

./: .env.example  .gitignore  Makefile  PRISM_Platform.spec  README.md  last_message_id.txt  log.txt  package-lock.json  package.json  pyproject.toml  run_gui.py
.github/workflows/: build.yml
assets/scss/: main.scss
frontend/: .prettierrc  eslint.config.js  gen-api.sh  index.html  openapi.json  orval.config.ts  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  hero.ts  index.css
src/: main.py  worker.py
src/api/: __init__.py  configurations.py  devices.py  groupResults.py  hosts.py  queries.py  requests.py  results.py  traces.py  worker.py
src/common/: adb.py  db.py  device.py  host_token.py  hostname.py  jwt.py  minio.py  perfetto_analysis.py  redis_client.py  simpleperf_html.py
src/controllers/: __init__.py  configs.py  devices.py  jobs.py  queries.py  traces.py
src/services/: background-cp.py  background.py  datatables_filter.py  job_requests.py  result_cache.py  run_perfetto.py  startup.py  worker_api.py  worker_config.py
src/tools/: record_android_trace.py
src/worker/: api.py  app.py  background.py  config.py  gui.py  run_perfetto.py  run_simpleperf.py
static/: main.css  main.css.map
templates/: error.html  index.html  layout.html
templates/configs/: add.html  browse.html  edit.html
templates/devices/: add.html  browse.html  edit.html
templates/includes/: query_card.html  sql_editor.html
templates/jobs/: result.html
templates/queries/: add.html  browse.html  edit.html
templates/traces/: add.html  read.html  (+1 more)
(+157 files in other folders)
